k8s/domains/documents/components/api/infra/overlays/ephemeral/documents-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: documents-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: documents-api
