k8s/domains/documents/components/api/infra/overlays/ephemeral/documents-api-public-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: documents-api-public
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`api.tma.com`) && (PathPrefix(`/v1/documents/docs`) || PathRegexp(`^/v1/accounts/[^/]+/documents$`))
      services:
        - name: documents-api
          port: 3000
  tls: {}
